# moci-project-demo

./: .env.example  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  databricks.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: pull_request_template.md
.github/workflows/: ci.yml  deploy-databricks.yml
docs/: architecture.md
jobs/: bronze_ingestion_job.py
pipelines/: README.md
pipelines/explorations/: README.md
pipelines/transformations/gold/: README.md  customer_lifetime_value.py  sales_by_store_month.py  stores_by_region.py  top_products.py
pipelines/transformations/silver/: README.md  customers.py  employees.py  order_items.py  orders.py  products.py  stores.py
pipelines/utilities/: README.md
resources/: jobs.yml  pipelines.yml
scripts/: run_mock_data_setup.py
scripts/mock_data/: __init__.py  config.py  db.py  dimensions.py  facts.py  schema_setup.py
sql/: README.md
sql/ddl/: 02_create_schema.sql  03_create_dimension_tables.sql  04_create_fact_tables.sql
sql/init/: 01_create_database.sql
src/moci_pipeline/: __init__.py
src/moci_pipeline/bronze/: __init__.py
src/moci_pipeline/bronze/sqlserver/: __init__.py  customers.py  employees.py  order_items.py  orders.py  products.py  stores.py
src/moci_pipeline/utils/: __init__.py  bronze_writer.py  jdbc.py  watermark.py
tests/: conftest.py
tests/unit/: test_config.py
